Fixed overflow

--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ body {
 	margin: 0 auto;
 	padding-left: 30px;
 	padding-right: 30px;
+	overflow: hidden;
 }
 
 .header {
